<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game Book</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="chapter1text">Hello warrior. You\'re samurai and must keep your master from enemies. But behind the hill are set at least 20 samurai who come to kill your master. They are at least 20 and you\'re alone. What would you do?</string>
    <string name="chapter1answer1">Will run from there.</string>
    <string name="chapter1answer2">Will stay to fight defending your master.</string>
    <string name="start_new_game">Start new game</string>
    <string name="chapter2text">Unfortunately, the enemies are too much and you do not manage to beat them. They kill you and then kill your master. Unfortunately, your adventure ends here, but you died with dignity fulfilling your duty.</string>
    <string name="chapter3text">You ran like a coward, leaving your master to be killed. But before that, you take a roll of paper with you, because of actually murderers come and want to take it. On it was written the secret of life and only selected people are allowed to read it. Your mission now is to take it to the oldest of the chosens and the most wise, to decide who is the next to take this roll.</string>
    <string name="chapter3answer1">F**k this, I\'ll read it.</string>
    <string name="chapter3answer2">Go and deliver it.</string>
    <string name="chapter4text">Going through many obstacles, battles (yeah right :) ) and difficulties, you finally managed to get to the oldest chosenness to carry the scroll.\n - Master, I bring you scroll with the mystery of life, tell me who is next worthy to possess it. \nHe looked you with his tired eyes and said: \n- Well, as I look at you, it seems to me that you are to be a decent. I leave that to you. I will appoint a ninja for your bodyguard to protect you, because samurai us something lessened. But first, do you want to make selfie together? :)</string>
    <string name="chapter4answer1">Read the secret message</string>
    <string name="chapter4answer2">Make selfie with the big master</string>
    <string name="chapter5answer1">Send sms to everyone.</string>
    <string name="chapter5answer2">Start new game.</string>
    <string name="chapter5text">Widened the scroll to read what it says and to understand the great and ever-guarded secret of life. Turning wide roll, your eyes opened wide, reading only sentence that was written there. Immediately picked up the phone and hurried to send it to all by SMS because you love to share.</string>
    <string name="chooser_title">Send Message</string>
    <string name="secret_message">SECRET_MESSAGE</string>
    <string name="title_activity_chapter2">Chapter2</string>
    <string name="title_activity_chapter5">Chapter5</string>
    <string name="title_activity_chapter3">Chapter3</string>
    <string name="title_activity_chapter4">Chapter4</string>

</resources>
